welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: not found: value i
    setPos(i,6)
           ^Diagonal:17: error: not found: value i
    for (j<-1 to 6-i){
                   ^